--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rmf_traffic
-	previous = 
-	base = 6299095
+	previous = 6299095
+	base = 4039822
 	trim = 
 	trimbase = 
