--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 027a176
-	base = 87c2fd8
-	trim = 
-	trimbase = 
+	base = 72fcb65
+	trim = rmf_traffic
+	trimbase = 87c2fd8
