--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/galactic/rmf_traffic
-	previous = 
-	base = fc98a12
+	previous = fc98a12
+	base = a6abc55
 	trim = 
 	trimbase = 
