--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/galactic/rmf_traffic
-	previous = 
-	base = 72fcb65
+	previous = 72fcb65
+	base = a1a65bf
 	trim = 
 	trimbase = 
