--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/galactic/rmf_traffic
-	previous = 
-	base = a2fc62e
+	previous = a2fc62e
+	base = bbbd02e
 	trim = 
 	trimbase = 
