--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.3.0-1": ["Mon Jul 19 2021", "Grey", "grey@openrobotics.org"]}
+{"1.3.0-2": ["Fri Jul 23 2021", "Grey", "grey@openrobotics.org"], "1.3.0-1": ["Mon Jul 19 2021", "Grey", "grey@openrobotics.org"]}
