--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = cbf84e8
-	base = f71e993
+	base = db55019
 	trim = rmf_traffic
-	trimbase = 
+	trimbase = f71e993
