--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = cbf84e8
-	base = 3f62a81
-	trim = 
-	trimbase = 
+	base = 74b59ff
+	trim = rmf_traffic
+	trimbase = 3f62a81
