--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/foxy/rmf_traffic
-	previous = 
-	base = 74b59ff
+	previous = 74b59ff
+	base = b2ad411
 	trim = 
 	trimbase = 
