--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/foxy/rmf_traffic
-	previous = 
-	base = 0711ceb
+	previous = 0711ceb
+	base = 77e215d
 	trim = 
 	trimbase = 
