--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b752682
-	base = 4489581
+	base = 2daba34
 	trim = rmf_traffic
-	trimbase = 
+	trimbase = 4489581
