--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 64e34ae
-	base = b0dde59
-	trim = 
-	trimbase = 
+	base = 8d67777
+	trim = rmf_traffic
+	trimbase = b0dde59
