--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rmf_traffic
-	previous = 
-	base = 8d67777
+	previous = 8d67777
+	base = ccab2f1
 	trim = 
 	trimbase = 
