--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rmf_traffic
-	previous = 
-	base = 45a9a7e
+	previous = 45a9a7e
+	base = 9870127
 	trim = 
 	trimbase = 
