--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rmf_traffic
-	previous = 
-	base = af54146
+	previous = af54146
+	base = 61a6376
 	trim = 
 	trimbase = 
