--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rmf_traffic
-	previous = 
-	base = 40c3aa7
+	previous = 40c3aa7
+	base = 4424df2
 	trim = 
 	trimbase = 
