--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = baaa735
-	base = 4c2f9bd
-	trim = 
-	trimbase = 
+	base = 1980d19
+	trim = rmf_traffic_examples
+	trimbase = 4c2f9bd
