--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = baaa735
-	base = 5eca160
+	base = 4bdb629
 	trim = rmf_traffic
-	trimbase = 
+	trimbase = 5eca160
