--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rmf_traffic_examples
-	previous = 
-	base = 1980d19
+	previous = 1980d19
+	base = d247ce2
 	trim = 
 	trimbase = 
