--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rmf_traffic_examples
-	previous = 
-	base = 1e391dd
+	previous = 1e391dd
+	base = 006732e
 	trim = 
 	trimbase = 
