--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rmf_traffic_examples
-	previous = 
-	base = 199efcf
+	previous = 199efcf
+	base = 9d3f6cb
 	trim = 
 	trimbase = 
