--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rmf_traffic_examples
-	previous = 
-	base = a889276
+	previous = a889276
+	base = 8d27109
 	trim = 
 	trimbase = 
