--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0f9b40a
-	base = 77ffffa
+	base = 6539777
 	trim = rmf_traffic
-	trimbase = 
+	trimbase = 77ffffa
