--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0f9b40a
-	base = 62ac6c9
+	base = 482a0de
 	trim = rmf_traffic_examples
-	trimbase = 
+	trimbase = 62ac6c9
