--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3c04cf3
-	base = a1246a4
+	base = c9d77ef
 	trim = rmf_traffic
-	trimbase = 
+	trimbase = a1246a4
