--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3c04cf3
-	base = 75653f9
+	base = 5f32b55
 	trim = rmf_traffic_examples
-	trimbase = 
+	trimbase = 75653f9
