--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 744baea
-	base = c222c86
+	base = 46c8a1b
 	trim = rmf_traffic
-	trimbase = 
+	trimbase = c222c86
