--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 744baea
-	base = 1b2b2ea
+	base = 76a95be
 	trim = rmf_traffic_examples
-	trimbase = 
+	trimbase = 1b2b2ea
