--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"2.0.1-1": ["Wed Sep 28 2022", "Grey", "grey@openrobotics.org"], "2.0.0-2": ["Tue Apr 19 2022", "Grey", "grey@openrobotics.org"], "2.0.0-1": ["Tue Apr 12 2022", "Grey", "grey@openrobotics.org"]}
+{"3.0.0-1": ["Mon Oct 03 2022", "Grey", "grey@openrobotics.org"], "2.0.1-1": ["Wed Sep 28 2022", "Grey", "grey@openrobotics.org"], "2.0.0-2": ["Tue Apr 19 2022", "Grey", "grey@openrobotics.org"], "2.0.0-1": ["Tue Apr 12 2022", "Grey", "grey@openrobotics.org"]}
