--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c7fc3b9
-	base = f57804f
-	trim = 
-	trimbase = 
+	base = 6bf5d6e
+	trim = rmf_traffic_examples
+	trimbase = f57804f
