--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c7fc3b9
-	base = 95b404f
-	trim = 
-	trimbase = 
+	base = 190e269
+	trim = rmf_traffic
+	trimbase = 95b404f
