--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rmf_traffic_examples
-	previous = 
-	base = 6bf5d6e
+	previous = 6bf5d6e
+	base = 4be45c7
 	trim = 
 	trimbase = 
