--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rmf_traffic_examples
-	previous = 
-	base = 36cf479
+	previous = 36cf479
+	base = 76e1d00
 	trim = 
 	trimbase = 
