--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rmf_traffic
-	previous = 
-	base = 190e269
+	previous = 190e269
+	base = 9174154
 	trim = 
 	trimbase = 
