--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rmf_traffic
-	previous = 
-	base = 73d261c
+	previous = 73d261c
+	base = 15aec79
 	trim = 
 	trimbase = 
