--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rmf_traffic_examples
-	previous = 
-	base = a7cf442
+	previous = a7cf442
+	base = f84c140
 	trim = 
 	trimbase = 
