--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rmf_traffic
-	previous = 
-	base = d80b44f
+	previous = d80b44f
+	base = 48e65da
 	trim = 
 	trimbase = 
