--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rmf_traffic
-	previous = 
-	base = b7603ee
+	previous = b7603ee
+	base = 05ae120
 	trim = 
 	trimbase = 
