--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rmf_traffic_examples
-	previous = 
-	base = 18d2625
+	previous = 18d2625
+	base = c7d47d8
 	trim = 
 	trimbase = 
