--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1dc4113
-	base = 43b4b84
+	base = b0b84bc
 	trim = rmf_traffic_examples
-	trimbase = 
+	trimbase = 43b4b84
