--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1dc4113
-	base = 3fe98de
+	base = 21bc701
 	trim = rmf_traffic
-	trimbase = 
+	trimbase = 3fe98de
