--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"3.0.0-2": ["Tue Mar 21 2023", "Grey", "grey@openrobotics.org"]}
+{"3.0.0-3": ["Thu Apr 20 2023", "Grey", "grey@openrobotics.org"], "3.0.0-2": ["Tue Mar 21 2023", "Grey", "grey@openrobotics.org"]}
