--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 45bf654
-	base = 356a16e
+	base = 5a28630
 	trim = rmf_traffic_examples
-	trimbase = 
+	trimbase = 356a16e
