--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 45bf654
-	base = 0c42c56
+	base = bc8cb3c
 	trim = rmf_traffic
-	trimbase = 
+	trimbase = 0c42c56
