--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bf210b8
-	base = f45cd97
+	base = ee2a3c7
 	trim = rmf_traffic_examples
-	trimbase = 
+	trimbase = f45cd97
