--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bf210b8
-	base = e008530
+	base = 73f895b
 	trim = rmf_traffic
-	trimbase = 
+	trimbase = e008530
