--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bdc363b
-	base = 8e5ecc1
+	base = 70b2966
 	trim = rmf_traffic_examples
-	trimbase = 
+	trimbase = 8e5ecc1
