--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bdc363b
-	base = 6cdee96
+	base = 068a46f
 	trim = rmf_traffic
-	trimbase = 
+	trimbase = 6cdee96
