--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"3.1.0": ["Grey", "grey@openrobotics.org"], "3.0.0": ["Grey", "grey@openrobotics.org"], "2.0.0": ["Grey", "grey@openrobotics.org"]}
+{"3.1.1": ["Grey", "grey@openrobotics.org"], "3.1.0": ["Grey", "grey@openrobotics.org"], "3.0.0": ["Grey", "grey@openrobotics.org"], "2.0.0": ["Grey", "grey@openrobotics.org"]}
