--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5e1c4dd
-	base = 6b95d58
+	base = a75f7f9
 	trim = rmf_traffic_examples
-	trimbase = 
+	trimbase = 6b95d58
