--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5e1c4dd
-	base = 73635e7
+	base = dabc863
 	trim = rmf_traffic
-	trimbase = 
+	trimbase = 73635e7
