--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5186bc0
-	base = d09f70f
+	base = 78f66e4
 	trim = rmf_traffic_examples
-	trimbase = 
+	trimbase = d09f70f
