--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5186bc0
-	base = 4d74ef4
+	base = 5cfc70f
 	trim = rmf_traffic
-	trimbase = 
+	trimbase = 4d74ef4
