--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c142b97
-	base = ee80a89
+	base = 88002ef
 	trim = rmf_traffic_examples
-	trimbase = 
+	trimbase = ee80a89
