--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c142b97
-	base = ac57709
+	base = aa40c2f
 	trim = rmf_traffic
-	trimbase = 
+	trimbase = ac57709
