--- a/tracks.yaml
+++ b/tracks.yaml
@@ -128,4 +128,5 @@ tracks:
     ros_distro: rolling
     vcs_type: git
     vcs_uri: https://github.com/open-rmf/rmf_traffic.git
-    version: :{auto}
+    version: 3.3.1
+    version_saved: :{auto}
