--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 12fd82f
-	base = 049b0f3
-	trim = 
-	trimbase = 
+	base = 0b81517
+	trim = rmf_traffic_examples
+	trimbase = 049b0f3
