--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 12fd82f
-	base = a6d93b9
-	trim = 
-	trimbase = 
+	base = e5a274c
+	trim = rmf_traffic
+	trimbase = a6d93b9
