--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rmf_traffic_examples
-	previous = 
-	base = 7dcac26
+	previous = 7dcac26
+	base = e7c05ef
 	trim = 
 	trimbase = 
