--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rmf_traffic
-	previous = 
-	base = e7518c6
+	previous = e7518c6
+	base = 873f41d
 	trim = 
 	trimbase = 
