--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rmf_traffic_examples
-	previous = 
-	base = f959858
+	previous = f959858
+	base = 3a5c9fc
 	trim = 
 	trimbase = 
