--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rmf_traffic
-	previous = 
-	base = 33796cf
+	previous = 33796cf
+	base = e7f58eb
 	trim = 
 	trimbase = 
