--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rmf_traffic
-	previous = 
-	base = e5a274c
+	previous = e5a274c
+	base = fa9eee3
 	trim = 
 	trimbase = 
