--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rmf_traffic
-	previous = 
-	base = 6502f22
+	previous = 6502f22
+	base = 7e2b176
 	trim = 
 	trimbase = 
