--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rmf_traffic_examples
-	previous = 
-	base = 0b81517
+	previous = 0b81517
+	base = bfa1c32
 	trim = 
 	trimbase = 
