--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rmf_traffic_examples
-	previous = 
-	base = afb2c14
+	previous = afb2c14
+	base = 2e1f3fa
 	trim = 
 	trimbase = 
