--- a/tracks.yaml
+++ b/tracks.yaml
@@ -128,5 +128,4 @@ tracks:
     ros_distro: rolling
     vcs_type: git
     vcs_uri: https://github.com/open-rmf/rmf_traffic.git
-    version: 3.3.1
-    version_saved: :{auto}
+    version: :{auto}
