--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 42d8492
-	base = 601f529
+	base = 6113036
 	trim = rmf_traffic_examples
-	trimbase = 
+	trimbase = 601f529
