--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 42d8492
-	base = 30bf82f
+	base = b59c968
 	trim = rmf_traffic
-	trimbase = 
+	trimbase = 30bf82f
