--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7da8636
-	base = 6c410bb
+	base = 50b6ef2
 	trim = rmf_traffic_examples
-	trimbase = 
+	trimbase = 6c410bb
