--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7da8636
-	base = b956370
+	base = 115cb3d
 	trim = rmf_traffic
-	trimbase = 
+	trimbase = b956370
