--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4390a81
-	base = 14b6ef3
+	base = b082c0c
 	trim = rmf_traffic_examples
-	trimbase = 
+	trimbase = 14b6ef3
