--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4390a81
-	base = c984506
+	base = 591ac33
 	trim = rmf_traffic
-	trimbase = 
+	trimbase = c984506
