--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 75ea3a7
-	base = 3afd058
+	base = 850ece6
 	trim = rmf_traffic_examples
-	trimbase = 
+	trimbase = 3afd058
