--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 75ea3a7
-	base = c8cbae0
+	base = 788dbf8
 	trim = rmf_traffic
-	trimbase = 
+	trimbase = c8cbae0
