--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = fdec48bfc5a0
-	base = e0aa66f23344
+	base = 7a37cc01dc9a
 	trim = rmf_traffic_examples
-	trimbase = 
+	trimbase = e0aa66f23344
