--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = fdec48bfc5a0
-	base = 1b83ad93a017
+	base = 72d49801dbd9
 	trim = rmf_traffic
-	trimbase = 
+	trimbase = 1b83ad93a017
