--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0a3a68f
-	base = ec62f31
+	base = 342afdc
 	trim = rmf_traffic
-	trimbase = 
+	trimbase = ec62f31
