--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0a3a68f
-	base = 2eac319
+	base = e6c63ec
 	trim = rmf_traffic_examples
-	trimbase = 
+	trimbase = 2eac319
