--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"3.4.0": ["Grey", "grey@openrobotics.org"], "3.3.1": ["Grey", "grey@openrobotics.org"], "3.2.0": ["Grey", "grey@openrobotics.org"], "3.1.0": ["Grey", "grey@openrobotics.org"], "3.0.0": ["Grey", "grey@openrobotics.org"], "2.0.0": ["Grey", "grey@openrobotics.org"]}
+{"3.5.0": ["Grey", "grey@openrobotics.org"], "3.4.0": ["Grey", "grey@openrobotics.org"], "3.3.1": ["Grey", "grey@openrobotics.org"], "3.2.0": ["Grey", "grey@openrobotics.org"], "3.1.0": ["Grey", "grey@openrobotics.org"], "3.0.0": ["Grey", "grey@openrobotics.org"], "2.0.0": ["Grey", "grey@openrobotics.org"]}
