--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"3.4.0-1": ["Sat Jun 15 2024", "Grey", "grey@openrobotics.org"], "3.3.1-2": ["Wed Mar 06 2024", "Grey", "grey@openrobotics.org"]}
+{"3.5.0-1": ["Sun May 11 2025", "Grey", "grey@openrobotics.org"], "3.4.0-1": ["Sat Jun 15 2024", "Grey", "grey@openrobotics.org"], "3.3.1-2": ["Wed Mar 06 2024", "Grey", "grey@openrobotics.org"]}
