--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0a3a68f
-	base = e1a46bc
+	base = 6d69768
 	trim = rmf_traffic_examples
-	trimbase = 
+	trimbase = e1a46bc
