--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0a3a68f
-	base = fb11cba
+	base = 2764487
 	trim = rmf_traffic
-	trimbase = 
+	trimbase = fb11cba
